--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "chai": "^4.3.10",
     "chai-spies": "^1.0.0",
     "mocha": "^10.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.2"
   }
 }
